--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,30 @@
   position: absolute;
   width: 100%;
 }
+
+
+.navbar_head-title::before {
+  content: "";
+  display: block;
+  width: 2px;
+  height: 14px;
+  margin-left: 8px;
+  background-color: #ef4056;
+}
+
+
+.navbar-menu-box-shadow {
+  box-shadow: 0 1px 1px rgb(0 0 0 / 14%), 0 4px 8px rgb(0 0 0 / 30%);
+}
+
+.navbar-box-shadow {
+  box-shadow: 0 1px 0 rgb(0 0 0 / 14%), 0 2px 0 rgb(0 0 0 / 5%);
+}
+
+.transition-height {
+  transition: height .2s ease-in-out;
+}
+
+.lock-body-scroll {
+  overflow: hidden !important;
+}
